crates/toml/tests/snapshots/invalid/spec-1.1.0/common-2.stderr
TOML parse error at line 1, column 7
  |
1 | key = # INVALID
  |       ^
string values must be quoted, expected literal string
